GNOME Bugzilla – Bug 719582
cogl-framebuffer: Don't mark the clear clip dirty from the journal
Last modified: 2013-12-04 18:39:06 UTC
This means that we can't cache the journal read_pixels optimization.
Created attachment 263166 [details] [review] cogl-framebuffer: Don't mark the clear clip dirty from the journal
Thanks. I've pushed the patch to master and the 1.18 branch.