cogl/cogl-framebuffer-private.h
@@ -240,6 +240,9 @@ _cogl_framebuffer_clear_without_flush4f (CoglFramebuffer *framebuffer,
                                          float alpha);
 
 void
+_cogl_framebuffer_mark_clear_clip_dirty (CoglFramebuffer *framebuffer);
+
+void
 _cogl_framebuffer_mark_mid_scene (CoglFramebuffer *framebuffer);
 
 /*
